--- a/css/userslog.css
+++ b/css/userslog.css
@@ -51,13 +51,13 @@ section {
 }
 .modal-content input[type="submit"],
 .form-style-5 button {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: Georgia, "Roboto", Times, serif;
   position: relative;
   display: block;
   padding: 8px;
   color: #FFF;
   margin: 0 auto;
-  background: #388994;
+  background: #A6B1E1;
   font-size: 15px;
   text-align: center;
   font-style: normal;
